--- a/style.css
+++ b/style.css
@@ -7,36 +7,119 @@
 
 body{
     font-size: 1em;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;    
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    background: rgb(228, 226, 226);   
 }
 
-#cabeçalho{
-    background: orange;
-    width: 100%
-    border: 2px solid black;
-}
+/* ---------------Layout------------------ */
 
-#titulo{
-    border: 2px solid black;
-    padding: 20px;
+#cabecalho{
+    background: #f7b600;
+    padding: 15px;
     text-align: center;
     
+}
+
+#logo, #menu{    
+    padding: 10px;    
+}
+
+#area-principal{    
+    width: 920px;
+    margin: 0 auto;
+    padding: 15px;
+}
+
+#area-postagens{
+    width: 660px;
+    float: left;
     
 }
 
-.tec{
-    border: 2px solid rgb(0, 0, 0);
-    color: rgb(84, 84, 84);
-    font-size: 2.5em;
-    margin-right: -5px;
+.postagem{
+    padding: 20px;
+    margin-bottom: 20px;
+    background: white;
+}
+
+#area-lateral{
+    width: 240px;
+    float: right;
     
 }
 
-.blog{
-    border: 2px solid black;
+.conteudo-lateral{
+    background: white;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.postagem-lateral{
+    font-size: 0.8em;
+    padding: 5px;
+    
+}
+
+#rodape{
+    clear: both;
+    text-align: center;
+    padding: 15px;
+    background: #ccc;
+}
+
+/* ---------------Formatação do menu---------------------*/
+a{
+    text-decoration: none;
+}
+
+a:link, a:visited{
+    color: #f7b600;    
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+#cabecalho a:link, #cabecalho a:visited{
     color: white;
-    margin-left: 0px;
-    font-size: 2.5em;
-    
+    padding: 8px 12px;
     
 }
+
+#cabecalho a:hover{
+    color: #f7b600;
+    background: white;
+    text-decoration: none;
+}
+
+/* ---------------Formatação em geral------------------- */
+
+h1{
+    color: #4e4e4e;
+    font-size: 2.5em;
+}
+
+h2{
+    color: #f7b600;
+}
+
+h3{
+    color: #565656;
+    background: #ccc;
+    padding: 5px;
+}
+
+.data{
+    font-size: 0.8em;
+    border-bottom: 1px solid #f4f4f4;
+    padding-bottom: 10px;
+    display: block;
+    margin-bottom: 10px;
+}
+
+.branco{
+    color: white;
+}
+
+
+
